Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107013

Wheel scroll event propagated from a modal dialog to the dialog below (Quick)

XMLWordPrintable

    • Linux/X11, macOS, Windows
    • caca7d7d4f (qt/qtdeclarative/dev) d34150025b (qt/qtdeclarative/6.4) d34150025b (qt/tqtc-qtdeclarative/6.4) caca7d7d4f (qt/tqtc-qtdeclarative/dev) b71df8ac7d (qt/tqtc-qtdeclarative/6.2) d34150025b (qt/tqtc-qtdeclarative/tqtc/qtinsight-6.4)

      A ListView that is placed in a Window will not scroll with the mouse wheel when a modal dialog is displayed on it. However, the ListView placed in the Dialog is scrolled with the mouse wheel even though there's a modal dialog on top of it.
      Other events such as mouse click is not propagated.

      How to reproduce
      1. Run QTBUG107013-MouseWheel.zip
      2. Press "Open subform" to open a modal dialog
      The ListView in the Window cannot be scrolled
      3. Press "Show dialog" and wheel the mouse on top of the ListView of the dialog of #2
      Expected result : ListView is not scrolled
      Actual result : ListView is scrolled

        For Gerrit Dashboard: QTBUG-107013
        # Subject Branch Project Status CR V

            vhilshei Volker Hilsheimer
            nagrohn Nahomi Gröhn (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes